Update button color and restore text

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,7 +13,7 @@ title: We're watching you. Sincerely, the NSA.
 			}(document, 'script', 'facebook-jssdk'));</script>
 			<script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
 			<div id="shareitup" style="overflow: visible">
-				<div class="fb-like" data-href="http://internetdefenseleague.org" data-send="false" data-layout="box_count" data-width="150" data-show-faces="true"></div>
+				<div class="fb-like" data-href="http://stillwatchingyou.com" data-send="false" data-layout="box_count" data-width="150" data-show-faces="true"></div>
 				<br />				<br />				<br />	
 				<a href="https://twitter.com/share" data-text="It's unconstitutional -- but I'm watching you. You can see what I am watching here. Sincerely, the NSA." class="twitter-share-button">Tweet</a>
 	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
@@ -82,6 +82,20 @@ title: We're watching you. Sincerely, the NSA.
       </div>
     </div>
     <div class="clear"></div>
+    
+    <p class="mono type type-6"> </p>
+
+    <div class="social-buttons">
+      <div>
+        <a href="#" class="social facebook"></a>
+        <a href="#" class="social twitter"></a>
+      </div>
+      <div class="clear"></div>
+      <div>
+        <a href="#" class="social tumblr"></a>
+        <a href="#" class="social google"></a>
+      </div>
+    </div>
   </div>
   <div class="sign-wrapper">
     <div id="sign">
