--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -153,7 +153,7 @@ body {
 }
 
 #pc {
-  height: 1160px;
+  height: 1420px;
   margin: 0 auto;
   padding: 0;
   padding-top: 1px;
@@ -354,28 +354,28 @@ body {
         padding: 16px;
         width: 204px;
         color: white;
-        border: 1px solid #11adc5;
+        border: 1px solid #1bb613;
         text-shadow: 0 0 1px #000000;
         border-radius: 3px;
-        background: #41ddf5; /* Old browsers */
-        background: -moz-linear-gradient(top, #41ddf5 0%, #11adc5 100%); /* FF3.6+ */
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#41ddf5), color-stop(100%,#11adc5)); /* Chrome,Safari4+ */
-        background: -webkit-linear-gradient(top, #41ddf5 0%,#11adc5 100%); /* Chrome10+,Safari5.1+ */
-        background: -o-linear-gradient(top, #41ddf5 0%,#11adc5 100%); /* Opera 11.10+ */
-        background: -ms-linear-gradient(top, #41ddf5 0%,#11adc5 100%); /* IE10+ */
-        background: linear-gradient(to bottom, #41ddf5 0%,#11adc5 100%); /* W3C */
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#41ddf5', endColorstr='#11adc5',GradientType=0 ); /* IE6-9 */
-        
+        background: #3adc31; /* Old browsers */
+        background: -moz-linear-gradient(top, #3adc31 0%, #1bb613 100%); /* FF3.6+ */
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3adc31), color-stop(100%,#1bb613)); /* Chrome,Safari4+ */
+        background: -webkit-linear-gradient(top, #3adc31 0%,#1bb613 100%); /* Chrome10+,Safari5.1+ */
+        background: -o-linear-gradient(top, #3adc31 0%,#1bb613 100%); /* Opera 11.10+ */
+        background: -ms-linear-gradient(top, #3adc31 0%,#1bb613 100%); /* IE10+ */
+        background: linear-gradient(to bottom, #3adc31 0%,#1bb613 100%); /* W3C */
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3adc31', endColorstr='#1bb613',GradientType=0 ); /* IE6-9 */
         
         &:hover {
-          background: #81eeff; /* Old browsers */
-          background: -moz-linear-gradient(top, #81eeff 0%, #11adc5 100%); /* FF3.6+ */
-          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#81eeff), color-stop(100%,#11adc5)); /* Chrome,Safari4+ */
-          background: -webkit-linear-gradient(top, #81eeff 0%,#11adc5 100%); /* Chrome10+,Safari5.1+ */
-          background: -o-linear-gradient(top, #81eeff 0%,#11adc5 100%); /* Opera 11.10+ */
-          background: -ms-linear-gradient(top, #81eeff 0%,#11adc5 100%); /* IE10+ */
-          background: linear-gradient(to bottom, #81eeff 0%,#11adc5 100%); /* W3C */
-          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#81eeff', endColorstr='#11adc5',GradientType=0 ); /* IE6-9 */
+          background: #76ff6e; /* Old browsers */
+          background: -moz-linear-gradient(top, #76ff6e 0%, #1bb613 100%); /* FF3.6+ */
+          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#76ff6e), color-stop(100%,#1bb613)); /* Chrome,Safari4+ */
+          background: -webkit-linear-gradient(top, #76ff6e 0%,#1bb613 100%); /* Chrome10+,Safari5.1+ */
+          background: -o-linear-gradient(top, #76ff6e 0%,#1bb613 100%); /* Opera 11.10+ */
+          background: -ms-linear-gradient(top, #76ff6e 0%,#1bb613 100%); /* IE10+ */
+          background: linear-gradient(to bottom, #76ff6e 0%,#1bb613 100%); /* W3C */
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#76ff6e', endColorstr='#1bb613',GradientType=0 ); /* IE6-9 */
+
         }
       }
     }
