--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -83,7 +83,7 @@ title: We're watching you. Sincerely, the NSA.
     </div>
     <div class="clear"></div>
     
-    <p class="mono type type-6"> </p>
+    <p class="mono type type-6"></p>
 
     <div class="social-buttons">
       <div>
@@ -127,14 +127,14 @@ title: We're watching you. Sincerely, the NSA.
 
 <div class="wrapper less">
   <div class="container">
-    <h2>The U.S. Government treats the Constitution as if it protects the stuff you're using less...</h2>
+    <h2 class="thin">In the 1700's peoples' homes were subject to random search and seizure, and in the 1950's the FBI and CIA tracked our correspondences by recording the information on the outside of envelopes and packages. People were outraged, and that's why we have protection of these things under laws like the 4th Amendment and ECPA.</h2>
     
     <div class="use-examples">
       <ul>
-        <li data-protected="true" data-text="Protected! Except in extreme circumstances, gov't must get a warrant."><i class="icon-envelope"> </i>Postal mail</li>
-        <li data-protected="true" data-text="Protected! Except in extreme circumstances, gov't must get a warrant."><i class="icon-file"> </i>Personal Papers</li>
-        <li data-protected="true" data-text="Protected! Except in extreme circumstances, gov't must get a warrant."><i class="icon-phone"> </i>Phone Calls</li>
-        <li data-protected="true" data-text="Protected! Except in extreme circumstances, gov't must get a warrant."><i class="icon-desktop"> </i>Your Hard Drive</li>
+        <li data-protected="true" data-text="Protected! Gov't must get a warrant."><i class="icon-envelope"> </i>Postal mail</li>
+        <li data-protected="true" data-text="Protected! Gov't must get a warrant."><i class="icon-file"> </i>Personal Papers</li>
+        <li data-protected="true" data-text="Protected! Gov't must get a warrant."><i class="icon-phone"> </i>Phone Calls</li>
+        <li data-protected="true" data-text="Protected! Gov't must get a warrant."><i class="icon-desktop"> </i>Your Hard Drive</li>
       </ul>
       
       <div class="info">
@@ -147,14 +147,14 @@ title: We're watching you. Sincerely, the NSA.
 
 <div class="wrapper more">
   <div class="container">
-    <h2>But not the stuff you're using more.</h2>
+    <h2 class="thin">Unfortunately, through secret interpretations of laws and secret courts, the government has been collecting our online data in order to watch over and detect the movements of Internet users everywhere. They also don't think they need a warrant to access information of specific individuals, either.</h2>
     
     <div class="use-examples">
       <ul>
-        <li data-protected="false" data-text="The gov't has frequently abused a loop-hole in ECPA to read private emails that have been opened or are more than 6 months old."><i class="icon-inbox"> </i>E-mail</li>
-        <li data-protected="false" data-text="The IRS recently apologized for exploiting ECPA to snoop on email, and said they would change their policy. But they still claim the right to look in your Online Docs or other online documents" data-protected="true"><i class="icon-file-alt"> </i>Online Docs</li>
-        <li data-protected="false" data-text="Text messaging didn't even exist when ECPA was passed, and it's language is vague enough that the gov't has used ECPA as a loop-hole to access texts without a warrant or probable cause."><i class="icon-meh"> </i>Text Messages</li>
-        <li data-protected="false" data-text='Given that there is general agreement that soon nearly all business will be conducted "in the cloud," Congress desperately needs to update ECPA to reiterate that the 4th Amendment applies to all data stored in the cloud.'><i class="icon-cloud"> </i>Cloud Storage</li>
+        <li data-protected="false" data-text="The government has said that it can read private emails that have been opened or are more than 6 months old without a warrant. The NSA has been automatically collecting these."><i class="icon-inbox"> </i>E-mail</li>
+        <li data-protected="false" data-text="The IRS recently apologized for saying that Internet users have no privacy, and it changed its policy. But other agencies still want to look in or collect your online documents without a warrant." data-protected="true"><i class="icon-file-alt"> </i>Online Docs</li>
+        <li data-protected="false" data-text="Text messaging didn't even exist when ECPA was passed."><i class="icon-meh"> </i>Text Messages</li>
+        <li data-protected="false" data-text='Given that all kinds of personal and business data is now stored "in the cloud," Congress desperately needs to update ECPA to make it clear that the warrant requirement in the 4th Amendment applies equally to documents and other data stored in the cloud.'><i class="icon-cloud"> </i>Cloud Storage</li>
       </ul>
       
       <div class="info">
