--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -159,7 +159,7 @@ body {
 }
 
 #pc {
-  height: 1420px;
+  height: 1500px;
   margin: 0 auto;
   padding: 0;
   padding-top: 1px;
@@ -191,10 +191,11 @@ body {
   #search-media {
     $padding: 20px;
 
+    height: 300px;
     border: 5px solid #fff;
     display: none;
     margin-top: 100px;
-    margin-bottom: 140px;
+    margin-bottom: 100px;
     padding: $padding;
     position: relative;
 
@@ -281,6 +282,7 @@ body {
       width: 820px;
       background: transparent url('/images/disclaimer.png') no-repeat top left;
       height: 81px;
+      top: 300px;
 
       img {
         float: left;
