Adds modal and fixes salsa form in modal

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -26,19 +26,18 @@ title: We're watching you. Sincerely, the NSA.
   <div class="content">
     <p class="lead">Tell the U.S. Government: "Want to read my stuff? Go get a warrant."</p>
     
-    <form>
+    <form action="http://hq-nt.salsalabs.com/save" method="POST">
+      <input type="hidden" name="object" value="supporter">
+      <input type="hidden" name="organization_KEY" value="501" />
       <div class="field">
-        <input type="text" placeholder="Name"/>
-      </div>
-      <div class="field">
-        <input type="text" placeholder="E-mail"/>
+        <input type="text" name="Email" placeholder="E-mail"/>
       </div>
       <div class="actions">
-        <input type="submit" value="sign"/>
+        <input type="submit" value="Sign Up"/>
       </div>
     </form>
 
-    <p><input type="checkbox" id="c1" /><label for="c1"><span></span> Sign up to receive occasional updates about defending online privacy.</label></p>
+    <!--<p><input type="checkbox" id="c1" /><label for="c1"><span></span> Sign up to receive occasional updates about defending online privacy.</label></p>-->
   </div>
 </div>
 <div id="pc">
