--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -535,6 +535,7 @@ form {
   &.intro {
     text-align: center;
     background: #eaeaea;
+    border-top: 2px solid black;
     box-shadow: inset 0 2px 2px #ccc;
     border-bottom: 1px solid #ccc;
   }
