--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -43,9 +43,9 @@ title: We're watching you. Sincerely, the NSA.
 <div id="pc">
   <div class="inner">
     <div id="first-type">
-      <p class="mono type type-1"> </p>
-      <p class="mono type type-2"> </p>
-      <p class="mono type type-3"> </p>
+      <p class="mono type type-1">I am watching you. I know where you are and what you'll be doing next.</p>
+      <p class="mono type type-2">I can target you and make you look like a suspect if I wanted to.</p>
+      <p class="mono type type-3">Want to see what I can do? Use the buttons below to look into your own email.</p>
       <p class="mono type type-4"> </p>
       <p class="mono type type-5"> </p>
     </div>
