--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: We're watching you. Sincerely, the NSA.
+title: We're watching you. Sincerely, the Government.
 ---
 
 <div class="socialize" style="position: fixed; top: 10px; right: 10px; height: 350px; z-index: 9999">
