--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -722,7 +722,7 @@ input[type="checkbox"]:checked + label span {
   background: url('/images/checkbox.png') left -20px no-repeat;
 }
 
-#modal {
+.modal {
   width: 850px;
   position: fixed;
   display: none;
@@ -818,5 +818,39 @@ input[type="checkbox"]:checked + label span {
 
       }
     }
+  }
+}
+
+.modal#safe {
+  width: 700px;
+  margin-left: -350px;
+  
+  .title {
+    background: #34c5e8; /* Old browsers */
+    background: -moz-linear-gradient(top, #34c5e8 0%, #2bb3e0 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#34c5e8), color-stop(100%,#2bb3e0)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #34c5e8 0%,#2bb3e0 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #34c5e8 0%,#2bb3e0 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #34c5e8 0%,#2bb3e0 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #34c5e8 0%,#2bb3e0 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#34c5e8', endColorstr='#2bb3e0',GradientType=0 ); /* IE6-9 */
+    border: none;
+    color: #103943;
+  }
+  
+  .social-buttons {
+    width: 600px;
+  }
+  
+  .social-buttons .social:nth-child(2) {
+    margin-left: 30px;
+  }
+  
+  .content p.lead {
+    font-size: 17px;
+  }
+  
+  .social-buttons .social.tumblr, .social-buttons .social.google {
+    margin-bottom: 0;
   }
 }
