Add share links and prevent default on modal close

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -50,13 +50,13 @@ title: We're watching you. Sincerely, the Government.
     
     <div class="social-buttons">
       <div>
-        <a href="#" class="social facebook"></a>
-        <a href="#" class="social twitter"></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.stillwatchingyou.com" target="_blank" class="social facebook"></a>
+        <a href="https://twitter.com/intent/tweet?related=&amp;url=http%3A%2F%2Fwww.stillwatchingyou.com&amp;text=We%27re%20watching%20you.%20Sincerely%2C%20the%20Government&amp;hashtags=stillwatchingyou" class="social twitter"></a>
       </div>
       <div class="clear"></div>
       <div>
-        <a href="#" class="social tumblr"></a>
-        <a href="#" class="social google"></a>
+        <a href="http://www.tumblr.com/share/link?url=http%3A%2F%2Fwww.stillwatchingyou.com%2F&name=We%27re%20watching%20you.%20Sincerely%2C%20the%20Government&description=By%20now%2C%20everyone%20knows.%20The%20U.S.%20Government%20has%20been%20spying%20on%20us.%20They%27ve%20built%20a%20massive%20surveillance%20system%20that%20uses%20the%20technology%20we%20love%20against%20us." class="social tumblr"></a>
+        <a href="https://plus.google.com/share?url=http%3A%2F%2Fwww.stillwatchingyou.com" class="social google"></a>
       </div>
     </div>
   </div>
@@ -92,7 +92,7 @@ title: We're watching you. Sincerely, the Government.
         <a data-query="guns" class="btn" href="https://mail.google.com/mail/u/0/?ui=2&shva=1#search/in%3Aanywhere+%22buy+a+gun%22+OR+%22buy+guns%22+OR+%22my+gun%22+OR+%22my+new+gun%22+OR+%22my+rifle%22+OR+%22my+pistol%22+OR+%22my+AK%22+OR+%22my+AR-15%22+OR+%22my+shotgun%22+OR+%22shooting+range%22+OR+%22going+hunting%22+OR+%22went+hunting%22+OR+%22let's+go+hunting%22">GUNS</a>
         <a data-query="politics" class="btn" href="https://mail.google.com/mail/u/0/?ui=2&shva=1#search/in:anywhere+%22occupy%22+OR+%22libertarian%22+OR+%22green+party%22+OR+%22anarchist%22+OR+%22communist%22+OR+%22socialist%22+OR+%22union+member%22+OR+%22palestine%22+OR+%22animal+liberation+front%22+OR+%22earth+liberation+front%22+OR+%22black+panther%22+OR+%22defcad%22+OR+%22distributed+defense%22+OR+%22ows%22+OR+%22anonymous%22+OR+%22bash+back%22+OR+%22hamas%22+OR+%22hezbollah%22+OR+%22anti-war%22+OR+%22gay+marriage%22+OR+%22abortion%22+OR+%22free+state+movement%22+OR+%22pro-life%22+OR+%22army+of+god%22+OR+%22minutemen%22+OR+%22golden+dawn%22+OR+%22aryan+nation%22+OR+%22operation+rescue%22">POLITICS</a>
         <div class="clear"></div>
-        <a class="btn" href="#">HEALTH INFO</a>
+        <a class="btn" href="https://mail.google.com/mail/u/0/?shva=1#search/in%3Aanywhere+%22my+doctor%22+OR+%22your+doctor%22+OR+%22my+therapist%22+OR+%22your+therapist%22+OR+%22herpes%22+OR+%22HIV%22+OR+%22my+test+results%22+OR+%22your+test+results%22+OR+%22AA+meetings%22+OR+%22gonorrhea%22+OR+%22chlamydia%22+OR+%22yeast+infection%22+OR+%22my+meds%22+OR+%22your+meds%22+OR+%22depressed%22+OR+%22HPV%22+OR+%22vaccine%22+OR+%22get+tested%22+OR+%22doctor%27s+appointement%22">HEALTH INFO</a>
         <a class="btn" href="https://mail.google.com/mail/u/0/?ui=2&shva=1#search/in%3Aanywhere+%22don't+tell+anyone%22+OR+%22our+little+secret%22+OR+%22do+not+forward%22+OR+%22keep+it+on+the+DL%22+OR+%22forget+you+heard+this%22+OR+%22you+didn't+hear+it+from+me%22+OR+%22can't+find+out%22">OTHER SECRETS</a>
       </div>
       
@@ -141,13 +141,13 @@ title: We're watching you. Sincerely, the Government.
 
     <div class="social-buttons">
       <div>
-        <a href="#" class="social facebook"></a>
-        <a href="#" class="social twitter"></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.stillwatchingyou.com" target="_blank" class="social facebook"></a>
+        <a href="https://twitter.com/intent/tweet?related=&amp;url=http%3A%2F%2Fwww.stillwatchingyou.com&amp;text=We%27re%20watching%20you.%20Sincerely%2C%20the%20Government&amp;hashtags=stillwatchingyou" class="social twitter"></a>
       </div>
       <div class="clear"></div>
       <div>
-        <a href="#" class="social tumblr"></a>
-        <a href="#" class="social google"></a>
+        <a href="http://www.tumblr.com/share/link?url=http%3A%2F%2Fwww.stillwatchingyou.com%2F&name=We%27re%20watching%20you.%20Sincerely%2C%20the%20Government&description=By%20now%2C%20everyone%20knows.%20The%20U.S.%20Government%20has%20been%20spying%20on%20us.%20They%27ve%20built%20a%20massive%20surveillance%20system%20that%20uses%20the%20technology%20we%20love%20against%20us." class="social tumblr"></a>
+        <a href="https://plus.google.com/share?url=http%3A%2F%2Fwww.stillwatchingyou.com" class="social google"></a>
       </div>
     </div>
   </div>
@@ -241,13 +241,13 @@ title: We're watching you. Sincerely, the Government.
       <h2>Do you agree? Spread the word.</h2>
       <div class="social-buttons">
         <div>
-          <a href="#" class="social facebook"></a>
-          <a href="#" class="social twitter"></a>
+          <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.stillwatchingyou.com" target="_blank" class="social facebook"></a>
+          <a href="https://twitter.com/intent/tweet?related=&amp;url=http%3A%2F%2Fwww.stillwatchingyou.com&amp;text=We%27re%20watching%20you.%20Sincerely%2C%20the%20Government&amp;hashtags=stillwatchingyou" class="social twitter"></a>
         </div>
         <div class="clear"></div>
         <div>
-          <a href="#" class="social tumblr"></a>
-          <a href="#" class="social google"></a>
+          <a href="http://www.tumblr.com/share/link?url=http%3A%2F%2Fwww.stillwatchingyou.com%2F&name=We%27re%20watching%20you.%20Sincerely%2C%20the%20Government&description=By%20now%2C%20everyone%20knows.%20The%20U.S.%20Government%20has%20been%20spying%20on%20us.%20They%27ve%20built%20a%20massive%20surveillance%20system%20that%20uses%20the%20technology%20we%20love%20against%20us." class="social tumblr"></a>
+          <a href="https://plus.google.com/share?url=http%3A%2F%2Fwww.stillwatchingyou.com" class="social google"></a>
         </div>
       </div>
     </div>
