--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -51,7 +51,7 @@ title: We're watching you. Sincerely, the Government.
     <div class="social-buttons">
       <div>
         <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.stillwatchingyou.com" target="_blank" class="social facebook"></a>
-        <a href="https://twitter.com/intent/tweet?related=&amp;url=http%3A%2F%2Fwww.stillwatchingyou.com&amp;text=We%27re%20watching%20you.%20Sincerely%2C%20the%20Government&amp;hashtags=stillwatchingyou" class="social twitter"></a>
+        <a href="https://twitter.com/intent/tweet?related=&amp;url=http%3A%2F%2Fwww.stillwatchingyou.com&amp;text=We%27re%20watching%20you.%20Sincerely%2C%20the%20Government&amp;hashtags=stopwatchingus" class="social twitter"></a>
       </div>
       <div class="clear"></div>
       <div>
@@ -142,7 +142,7 @@ title: We're watching you. Sincerely, the Government.
     <div class="social-buttons">
       <div>
         <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.stillwatchingyou.com" target="_blank" class="social facebook"></a>
-        <a href="https://twitter.com/intent/tweet?related=&amp;url=http%3A%2F%2Fwww.stillwatchingyou.com&amp;text=We%27re%20watching%20you.%20Sincerely%2C%20the%20Government&amp;hashtags=stillwatchingyou" class="social twitter"></a>
+        <a href="https://twitter.com/intent/tweet?related=&amp;url=http%3A%2F%2Fwww.stillwatchingyou.com&amp;text=We%27re%20watching%20you.%20Sincerely%2C%20the%20Government&amp;hashtags=stopwatchingus" class="social twitter"></a>
       </div>
       <div class="clear"></div>
       <div>
@@ -242,7 +242,7 @@ title: We're watching you. Sincerely, the Government.
       <div class="social-buttons">
         <div>
           <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.stillwatchingyou.com" target="_blank" class="social facebook"></a>
-          <a href="https://twitter.com/intent/tweet?related=&amp;url=http%3A%2F%2Fwww.stillwatchingyou.com&amp;text=We%27re%20watching%20you.%20Sincerely%2C%20the%20Government&amp;hashtags=stillwatchingyou" class="social twitter"></a>
+          <a href="https://twitter.com/intent/tweet?related=&amp;url=http%3A%2F%2Fwww.stillwatchingyou.com&amp;text=We%27re%20watching%20you.%20Sincerely%2C%20the%20Government&amp;hashtags=stopwatchingus" class="social twitter"></a>
         </div>
         <div class="clear"></div>
         <div>
