--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -46,7 +46,7 @@ title: We're watching you. Sincerely, the Government.
   <a href="#" class="close">Close</a>
   <div class="title">You're safe for now.</div>
   <div class="content">
-    <p class="lead">Good thing this site was made by an advocacy group and not the government, huh? Want to freak out your friends? Share this.</p>
+    <p class="lead">Do you think the US government should stop watching us and want to help stop it?</p>
     
     <div class="social-buttons">
       <div>
